2006-10-01  Kjartan Maraas  <kmaraas@gnome.org>

	* gui/component/addressbook-component.c: Remove duplicate include.
	* gui/contact-editor/e-contact-editor.c: (extract_simple_field):
	Fix some compiler warnings.
	* gui/contact-editor/e-contact-quick-add.c:
	(build_quick_add_dialog): Cast away a compiler warning.
	* gui/widgets/e-addressbook-view.c: (generate_viewoption_menu):
	#if 0 out an unused array, fix 0 vs NULL initialization in some
	other arrays and remove an unused GSList.
	* gui/widgets/e-minicard.c: (add_email_field): Make a var const.
	* gui/widgets/eab-gui-util.c: (eab_contact_save),
	(eab_contact_list_save): Add some casts to fix compiler warnings
	and #if 0 out an unused function.
	* util/eab-book-util.c: (escape), (eab_contact_list_from_string):
	Some GString fixes. All of this from bug #332101.

2006-08-24  Ushveen Kaur <kushveen@novell.com>

	** Fixes bug #261062

	* addressbook.error.xml: Translator comments added.

2006-09-28  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #357811
	
	* gui/widgets/e-addressbook-view.c: (search_activated): Fix for search
	on any type to work.

2006-09-18  Matthew Barnes  <mbarnes@redhat.com>

	Fixes bug #351332

	* gui/widgets/e-minicard.c:
	Fix implicit function declarations.

2006-09-12  Ushveen Kaur  <kushveen@novell.com>

	** Fixes bug #352353

	* gui/widgets/eab-gui-utils.c (file_exists): Translator comment 
	is added.

2006-08-21  Srinivasa Ragavan  <sragavan@novell.com>

	* gui/widgets/e-addressbook-view.c: (string_without_underscores),
	(generate_viewoption_menu), (make_suboptions): Fixes a lot of search
	issues.

2006-08-17  Kjartan Maraas  <kmaraas@gnome.org>

	* gui/component/addressbook-component.c: (impl_requestCreateItem):
	Plug a leak.

2006-08-09  Ushveen Kaur  <kushveen@novell.com>

	** Fixes bug #261239
	
	* gui/contact-editor/contact-editor.glade: Tab focus corrected in
	Mailing Address tab of Contact Editor.

2006-08-07  Sushma Rai  <rsushma@novell.com>
