@@ -80,8 +80,9 @@
 
  <error type="question" id="prompt-resize" default="GTK_RESPONSE_YES">
   <_primary>The image you have selected is large. Do you want to resize and store it?</_primary>
-  <button stock="gtk-no" response="GTK_RESPONSE_NO"/>
-  <button stock="gtk-yes" response="GTK_RESPONSE_YES"/>
+  <button _label="_Resize" response="GTK_RESPONSE_YES"/>
+  <button _label="_Use as it is" response="GTK_RESPONSE_NO"/>
+  <button _label="_Do not save" response="GTK_RESPONSE_CANCEL"/>
  </error>
 
  <error id="save-error" type="error">
